--- a/site_Taitai/stylep.css
+++ b/site_Taitai/stylep.css
@@ -1,8 +1,9 @@
 body {
-    
+
     font-family: "Arial";
     /* Define a fonte padrão para o corpo do documento */
     margin: 0;
+    background-color: #b4e3ff;
     /* Remove margens externas */
     padding: 0;
     /* Remove preenchimento */
@@ -12,54 +13,248 @@ body {
 
 /* Estilo do cabeçalho */
 header {
-    background-color: rgb(20, 20, 54);
+    background-color: #041d2c;
+    display: flex;
     /* Define a cor de fundo do cabeçalho */
 }
 
+.logintitle {
+    padding: 10px 0 0 60px;
+    color: white;
+}
+
+.logintitle2 {
+    padding: 10px 0 0 0px;
+    text-align: center;
+    color: white;
+    
+    
+}
+
+
+#logoutButton {
+    margin: 0 0 5px 40px;
+    background-color: #041d2c; /* Cor de fundo */
+    color: white; /* Cor do texto */
+    padding: 10px 20px; /* Espaçamento interno */
+    border: none; /* Remove a borda */
+    cursor: pointer; /* Altera o cursor para um ponteiro ao passar o mouse */
+    border-radius: 20px; /* Adiciona bordas arredondadas */
+    font-size: 16px; /* Tamanho da fonte */
+}
+
+#logoutButton:hover {
+    background-color: darkred; /* Cor de fundo quando hover */
+}
+ 
+
+
+
 .logo_tshirt {
-    position: relative;
-    /* Define uma posição relativa para .logo_caixa */
-    margin: auto;
-    /* Centraliza horizontalmente usando 'auto' nas margens esquerda e direita */
-    padding-left: 130px;
+
+    margin-left: 150px;
+    padding-left: 0px;
 
 }
+
+.login-container {
+    position: absolute;
+    /* Define a posição absoluta para a div de login */
+
+    right: 100px;
+    top: 10px;
+
+}
+
+.login {
+    background-color: #5a9f95;
+    /* Cor de fundo para a div de login */
+
+    width: 200px;
+    /* Define a largura */
+    border-radius: 30px;
+    /* Arredonda as bordas */
+}
+
+#loginForm .input-container {
+    margin-bottom: 10px;
+    /* Adiciona espaço abaixo de cada container de input */
+}
+
+#loginForm input {
+    width: 100px;
+    /* Largura fixa para as caixas de entrada */
+    height: 15px;
+    /* Altura da caixa de texto */
+    margin-left: -35px;
+    /* Espaço à esquerda da caixa de texto */
+
+}
+
+#loginForm label {
+    color: white;
+    font-weight: bold;
+    display: inline-block;
+    /* Exibe as etiquetas como blocos em linha */
+    width: 90px;
+    /* Largura fixa para as etiquetas */
+    text-align: left;
+    /* Alinha o texto das etiquetas à esquerda */
+    margin-left: 15px;
+}
+
+#loginForm input[type="submit"] {
+    font-weight: bold;
+    background-color: #041d2c; /* Cor de fundo */
+    color: white; /* Cor do texto */
+    margin-bottom: 5px;
+    width: 100px;
+    cursor: pointer; /* Altera o cursor para um ponteiro ao passar o mouse */
+    border: none; /* Remove a borda */
+    margin-left: 50px;
+    height: 20px;
+    border-radius: 20px; /* Adiciona bordas arredondadas */
+    /* Ajusta a margem esquerda do botão de submissão */
+    
+}
+
+#loginForm input[type="submit"]:hover {
+    background-color: darkred; /* Cor de fundo quando hover */
+
+
+}
+
+#loginForm input[type="submit2"] {
+    font-weight: bold;
+    margin-bottom: 5px;
+    width: 100px;
+    margin-left: 50px;
+    height: 20px;
+    /* Ajusta a margem esquerda do botão de submissão */
+}
+
+/* Estiliza o ícone do carrinho */
+#cartIcon {
+    position: absolute; /* Posicionamento absoluto para permitir a centralização */
+    top: 85%; /* Coloca o topo do ícone no meio vertical */
+    left: 74%; /* Coloca o ícone no meio horizontal */
+    transform: translate(-50%, -50%); /* Centraliza completamente o ícone */
+    cursor: pointer; /* Altera o cursor para um ponteiro quando hover */
+    
+    
+    
+    
+}
+
+#cartIcon img {
+    width: 48px; /* Redimensiona o ícone do carrinho */
+    
+    
+}
+
+
+
+/* Estiliza a área do carrinho de compras */
+#cartArea {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 1400px;
+    background-color: white; /* Fundo semi-transparente */
+    z-index: 999; /* Garante que o carrinho esteja sempre na parte superior */
+}
+
+/* Estiliza o conteúdo do carrinho */
+#cartContent {
+    padding: 20px;
+}
+
+/* Estiliza o botão de finalizar compra */
+#checkoutButton {
+    
+    
+    position: absolute;
+    bottom: 70px; /* Posiciona o botão na parte inferior */
+    left: 50%;
+    transform: translateX(-50%); /* Centraliza horizontalmente */
+    padding: 10px 20px;
+    background-color: #041d2c;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+
+/* Estiliza o botão de fechar */
+#closeButton {
+    position: absolute;
+    bottom: 30px; /* Posiciona o botão na parte inferior */
+    left: 50%;
+    transform: translateX(-50%); /* Centraliza horizontalmente */
+    padding: 10px 20px;
+    background-color: darkred;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+
 
 /* Estilização da navegação no cabeçalho */
 nav {
-    position: absolute; /* Define o posicionamento absoluto */
-    right: 200px; /* Margem direita de 50 pixels */
-    top: 50px; /* Margem superior de 100 pixels */
+    position: absolute;
+    /* Define o posicionamento absoluto */
+    right: 450px;
+    /* Margem direita de 50 pixels */
+    top: 50px;
+    /* Margem superior de 100 pixels */
 }
 
 nav li {
-    display: inline; /* Exibe os itens em linha */
-    margin: 0 0 0 30px; /* Define margens (0 topo, 0 direita, 0 inferior, 30px esquerda) */
+    display: inline;
+    /* Exibe os itens em linha */
+    margin: 0 0 0 30px;
+    /* Define margens (0 topo, 0 direita, 0 inferior, 30px esquerda) */
 }
 
 
 /* Estilização do menu */
 nav a {
-    color: rgb(255, 255, 255); /* Define a cor do texto */
-    text-decoration: none; /* Remove decoração de texto */
-    text-transform: auto; /* Transformação de texto automática (isso deve ser 'none' ou outra transformação desejada) */
-    font-weight: bold; /* Define a espessura da fonte como negrito */
-    font-size: 50px; /* Define o tamanho da fonte como 50 pixels */
-   
-    transition: transform 0.3s ease; /* Transição suave de 0.3 segundos para a propriedade 'transform' */
-    display: inline-block; /* Para garantir que o efeito de escala funcione corretamente */
+    color: rgb(255, 255, 255);
+    /* Define a cor do texto */
+    text-decoration: none;
+    /* Remove decoração de texto */
+    text-transform: auto;
+    /* Transformação de texto automática (isso deve ser 'none' ou outra transformação desejada) */
+    font-weight: bold;
+    /* Define a espessura da fonte como negrito */
+    font-size: 50px;
+    /* Define o tamanho da fonte como 50 pixels */
+
+    transition: transform 0.3s ease;
+    /* Transição suave de 0.3 segundos para a propriedade 'transform' */
+    display: inline-block;
+    /* Para garantir que o efeito de escala funcione corretamente */
 }
 
 /* Estilização do menu quando o mouse está em cima */
 nav a:hover {
-    color: rgb(194, 151, 32); /* Altera a cor do texto para preto quando o mouse passa por cima */
-    text-decoration: none; /* Remove decoração de texto */
-    transform: scale(1.1); /* Efeito de escala quando o mouse passa por cima */
+    color: rgba(90,159,149,255);
+    /* Altera a cor do texto para preto quando o mouse passa por cima */
+    text-decoration: none;
+    /* Remove decoração de texto */
+    transform: scale(1.1);
+    /* Efeito de escala quando o mouse passa por cima */
 }
 
 .titulo {
-    font-size: 30px;
+    text-align: center;
+    font-size: 60px;
     padding-left: 140px;
+    color: #041d2c;
 }
 
 hr {
@@ -67,7 +262,7 @@ hr {
     /* Define a largura da linha para 50% da largura do contêiner */
     height: 5px;
     /* Define a altura da linha */
-    background-color: rgb(194, 151, 32);
+    background-color: #041d2c;
     /* Cor da linha */
     border: none;
     /* Remove a borda padrão */
@@ -75,54 +270,189 @@ hr {
 }
 
 .product {
-    margin: 0 0 0 150px;
+    margin: 0 0 0 138px;
     position: relative;
     display: inline-block;
-    margin-top: 50px; /* Altera a margem superior */
-  }
-  
-  #productImage {
-    width: 300px; /* Altera a largura da imagem */
-    height: auto; /* Mantém a proporção da imagem */
-  }
-  
-  .change-btn, .buy-btn {
-    display: block; /* Torna os botões em blocos */
-    margin: 10px auto; /* Centraliza os botões */
-    padding: 10px 20px; /* Adiciona padding aos botões */
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
+    margin-top: 50px;
+    /* Altera a margem superior */
+}
 
-  .product2 {
-    margin: 0 0 0 150px;
-    position: relative;
-    display: inline-block;
-    margin-top: 50px; /* Altera a margem superior */
-  }
-  
-  #productImage2 {
-    width: 300px; /* Altera a largura da imagem */
-    height: auto; /* Mantém a proporção da imagem */
-  }
-  
-  .change-btn2, .buy-btn2 {
-    display: block; /* Torna os botões em blocos */
-    margin: 10px auto; /* Centraliza os botões */
-    padding: 10px 20px; /* Adiciona padding aos botões */
-    background-color: #007bff;
+#productImage {
+    width: 300px;
+    /* Altera a largura da imagem */
+    height: auto;
+    /* Mantém a proporção da imagem */
+}
+
+.change-btn,
+.buy-btn {
+    display: block;
+    /* Torna os botões em blocos */
+    margin: 10px auto;
+    /* Centraliza os botões */
+    padding: 10px 20px;
+    /* Adiciona padding aos botões */
+    background-color: #041d2c;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-  }
+}
+
+.quantity {
+    margin: 0 0 0 70px;
+    font-weight: bold;
+}
+
+.size {
+    margin: 0 0 0 70px;
+    font-weight: bold;
+}
+
+.product2 {
+    margin: 0 0 0 135px;
+    position: relative;
+    display: inline-block;
+    margin-top: 50px;
+    /* Altera a margem superior */
+}
+
+#productImage2 {
+    width: 300px;
+    /* Altera a largura da imagem */
+    height: auto;
+    /* Mantém a proporção da imagem */
+}
+
+.change-btn2,
+.buy-btn2 {
+    display: block;
+    /* Torna os botões em blocos */
+    margin: 10px auto;
+    /* Centraliza os botões */
+    padding: 10px 20px;
+    /* Adiciona padding aos botões */
+    background-color: #041d2c;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.quantity2 {
+    margin: 0 0 0 70px;
+    font-weight: bold;
+}
+
+.size2 {
+    margin: 0 0 0 70px;
+    font-weight: bold;
+}
+
+.product3 {
+    margin: 0 0 0 135px;
+    position: relative;
+    display: inline-block;
+    margin-top: 50px;
+    /* Altera a margem superior */
+}
+
+#productImage3 {
+    width: 300px;
+    /* Altera a largura da imagem */
+    height: auto;
+    /* Mantém a proporção da imagem */
+}
+
+.change-btn3,
+.buy-btn3 {
+    display: block;
+    /* Torna os botões em blocos */
+    margin: 10px auto;
+    /* Centraliza os botões */
+    padding: 10px 20px;
+    /* Adiciona padding aos botões */
+    background-color: #041d2c;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.quantity3 {
+    margin: 0 0 0 70px;
+    font-weight: bold;
+}
+
+.size3 {
+    margin: 0 0 0 70px;
+    font-weight: bold;
+}
+
+.product4 {
+    margin: 0 0 0 135px;
+    position: relative;
+    display: inline-block;
+    margin-top: 50px;
+    /* Altera a margem superior */
+}
+
+#productImage4 {
+    width: 300px;
+    /* Altera a largura da imagem */
+    height: auto;
+    /* Mantém a proporção da imagem */
+}
+
+.change-btn4,
+.buy-btn4 {
+    display: block;
+    /* Torna os botões em blocos */
+    margin: 10px auto;
+    /* Centraliza os botões */
+    padding: 10px 20px;
+    /* Adiciona padding aos botões */
+    background-color: #041d2c;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.quantity4 {
+    margin: 0 0 0 70px;
+    font-weight: bold;
+}
+
+.size4 {
+    margin: 0 0 0 70px;
+    font-weight: bold;
+}
+
+input[type="number"] {
+    font-weight: bold;
+    margin: 5px;
+    padding: 2px;
+    /* Adiciona padding para tornar o tamanho semelhante */
+
+    box-sizing: border-box;
+    /* Inclui o padding e a borda no tamanho total */
+    width: 60px;
+}
+
+select {
+    font-weight: bold;
+    margin: 5px 0 0 21.6px;
+    padding: 2px;
+    /* Adiciona padding para tornar o tamanho semelhante */
+
+
+    width: 60px;
+}
 
 footer {
 
-    background-color: rgb(20, 20, 54);
+    background-color: #041d2c;
     /* Define a cor de fundo do cabeçalho */
 }
 
@@ -134,13 +464,13 @@ footer {
     font-size: 12px;
     /* Define o tamanho da fonte como 12 pixels */
     margin: 0 0 0 900px;
-    background-color: rgb(20, 20, 54);
+    background-color: #041d2c;
 
-    border-bottom: 1px solid rgb(20, 20, 54);
+    border-bottom: 1px solid #041d2c;
     /* Aqui você define a cor e a espessura da borda inferior */
     padding-bottom: 50px;
     /* Adiciona algum espaçamento entre o texto e a borda */
-    border-top: 1px solid rgb(20, 20, 54);
+    border-top: 1px solid #041d2c;
     padding-top: 50px;
 
 }
@@ -155,19 +485,19 @@ footer {
 
 /* Cor da barra de rolagem */
 ::-webkit-scrollbar-track {
-    background: rgb(194, 151, 32);
+    background: rgb(167, 33, 0);
     /* Cor de fundo da barra de rolagem */
 }
 
 /* Cor da alça da barra de rolagem */
 ::-webkit-scrollbar-thumb {
-    background: rgb(20, 20, 54);
+    background: #041d2c;
     /* Cor da alça da barra de rolagem */
 }
 
 /* Cor ao passar o mouse sobre a alça da barra de rolagem */
 ::-webkit-scrollbar-thumb:hover {
-    background: rgb(20, 20, 54);
+    background: #041d2c;
     /* Cor ao passar o mouse sobre a alça da barra de rolagem */
 }
 
